// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxLength delegates to the underlying code if length is missing or is not an integer 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "null",
  },
]
`;

exports[`maxLength delegates to the underlying code if length is missing or is not an integer 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "object",
  },
]
`;

exports[`maxLength delegates to the underlying code if length is missing or is not an integer 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "object",
  },
]
`;

exports[`maxLength fails to parse if the length is above the maximum length 1`] = `
[
  {
    "code": "too_long",
    "length": 2,
    "maxLength": 1,
    "path": [],
  },
]
`;
